# mir2x

./: :q  .gitattributes  .gitignore  .travis.yml  1  @  CMakeLists.txt  README.md  appveyor.yml  build.py  mir2x-build.sh  mir2x-client.sh  mir2x-server-cpu-profiler.sh  mir2x-server-memory-profiler.sh  mir2x-server.sh  vcpkg-configuration.json  vcpkg.json  ~
client/src/: .processrun.cpp.swp  :w  CMakeLists.txt  CMakeLists.txt.orig  RenderDevice.h  acbutton.cpp  acbutton.hpp  action.cpp  action.hpp  actor.cpp  actor.hpp  actorginfo.hpp  acutionboard.cpp  acutionboard.hpp  alphaonbutton.cpp  alphaonbutton.hpp  ascendstr.cpp  ascendstr.hpp  attachmagic.cpp  attachmagic.hpp  baseframeboard.cpp  baseframeboard.hpp  basemagic.cpp  basemagic.hpp  bevent.hpp  bgmusicdb.cpp  bgmusicdb.hpp  button.cpp  button.hpp  buttonbase.cpp  buttonbase.hpp  charbox.cpp  charbox.hpp  checkbox.cpp  checkbox.hpp  checklabel.cpp  checklabel.hpp  client.cpp  client.hpp  clientanthealer.hpp  (+450 more)
common/src/: CMakeLists.txt  ]  abdlist.hpp  acnodewrapper.hpp  actionnode.cpp  actionnode.hpp  aesf.cpp  aesf.hpp  alphaf.hpp  argf.hpp  argparser.hpp  asiof.hpp  asyncf.hpp  attackmodifierrecord.inc  base64f.hpp  basehub.hpp  bitstreamf.hpp  buffactrecord.inc  buffrecord.hpp  buffrecord.inc  bufftriggerrecord.inc  buildconfig.hpp.in  buildsignature.hpp.in  bvtree.cpp  bvtree.hpp  cachequeue.hpp  cerealf.hpp  clientmessage.hpp  clientmsg.hpp  colorf.cpp  colorf.hpp  colorfunc.cpp  colorfunc.hpp  combatnode.cpp  combatnode.hpp  commonitem.hpp  compress.cpp  compress.hpp  conceptf.hpp  condcheck.hpp  (+199 more)
server/monoserver/src/: '  CMakeLists.txt  Launch  ObjectEngine.cpp  ObjectEngine.h  activeobject.cpp  activeobject.hpp  actordatapackage.hpp  actormessage.hpp  actormonitor.hpp  actormonitortable.cpp  actormonitortable.hpp  actormonitorwindow.fl  actormsg.hpp  actormsgbuf.hpp  actormsgpack.hpp  actorpod.cpp  actorpod.hpp  actorpool.cpp  actorpool.hpp  actorthreadmonitortable.hpp  actorthreadmonitorwindow.fl  addmonster.cpp  addmonsterwindow.fl  addplayer.cpp  asynchub.hpp  asyncobject.hpp  batchluamodule.cpp  batchluamodule.hpp  channel.cpp  channel.hpp  channpackq.cpp  channpackq.hpp  charobject.cpp  charobject.hpp  charobjectco.cpp  charobjectop.cpp  commandinput.cpp  commandinput.hpp  commandluamodule.cpp  (+149 more)
server/src/: CMakeLists.txt  [  actordatapackage.hpp  actormonitor.hpp  actormonitortable.cpp  actormonitortable.hpp  actormonitorwindow.fl  actormsg.hpp  actormsgbuf.hpp  actormsgpack.hpp  actornetdriver.cpp  actornetdriver.hpp  actorpod.cpp  actorpod.hpp  actorpool.cpp  actorpool.hpp  anthealer.cpp  anthealer.hpp  basebuff.cpp  basebuff.hpp  batchluamodule.cpp  batchluamodule.hpp  batmother.cpp  batmother.hpp  battleobject.cpp  battleobject.hpp  buff.cpp  buff.hpp  buffact.cpp  buffact.hpp  buffactattackmodifier.cpp  buffactattackmodifier.hpp  buffactattributemodifier.cpp  buffactattributemodifier.hpp  buffactaura.cpp  buffactaura.hpp  buffactcontroller.cpp  buffactcontroller.hpp  buffactspellmodifier.cpp  buffactspellmodifier.hpp  (+190 more)
tools/: CMakeLists.txt
tools/anibatchmaker/src/: main.cpp
tools/animaker/src/: CMakeLists.txt  aboutwindow.fl  actionset.cpp  actionset.hpp  actionsettestgroup.fl  animationinfowindow.fl  animationpreviewwindow.cpp  animationpreviewwindow.hpp  animationset.cpp  animationset.hpp  controlwindow.fl  covereditgroup.fl  directionaligngroup.fl  framealigngroup.fl  main.cpp  mainwindow.cpp  mainwindow.fl  mainwindow.hpp  misc.hpp  operationarea.cpp  operationarea.hpp  progressbarwindow.fl  rectcover.cpp  rectcover.hpp  rectcovereditgroup.fl  shadoweditgroup.cpp  sidwindow.cpp  sidwindow.fl  sidwindow.hpp  validanimationwindow.fl  validwilfilewindow.fl  wilanimationinfo.cpp
tools/bgmlistdecoder/src/: CMakeLists.txt  main.cpp
tools/bufficon/1/: iconconv.py
tools/bufficon/2/: iconconv.py
tools/bufficon/3/: iconconv.py
tools/bufficon/4/: iconconv.py
tools/dbcreate/: database.lua  main.sh  readme.txt
tools/dbcreator/: CMakeLists.txt  database.lua  readme.txt
tools/dropgen/src/: dropgen.py
tools/followuidmagiceditor/src/: CMakeLists.txt  aboutwindow.fl  magicdrawarea.cpp  magicdrawarea.hpp  magicframedb.cpp  magicframedb.hpp  main.cpp  mainwindow.fl
tools/fpm_decoder/src/: CMakeLists.txt  main.cpp
tools/gfxmaker/src/: main.cpp
tools/gif2emoji/src/: gif2emoji.py  gif2emoji_convert.py
tools/hairwil2png/src/: CMakeLists.txt  main.cpp
tools/helmetwil2png/src/: CMakeLists.txt  main.cpp
tools/herowil2png/src/: CMakeLists.txt  main.cpp  main.sh
tools/installres/src/: CMakeLists.txt  install_res.py
tools/ipm_decoder/src/: CMakeLists.txt  main.cpp
tools/magiccsv2cpp/src/: magiccsv2cpp.py
tools/magicwil2png/src/: CMakeLists.txt  main.cpp
tools/mapconverter/src/: CMakeLists.txt  main.cpp
tools/mapdbmaker/src/: CMakeLists.txt  main.cpp  main.sh
tools/mapeditor/src/: CMakeLists.txt  aboutwindow.fl  aboutwindow.hpp  animation.cpp  animation.hpp  animationdb.cpp  animationdb.hpp  animationdraw.hpp  animationlistwindow.fl  animationpreviewarea.cpp  animationpreviewarea.hpp  animationpreviewwindow.cpp  animationpreviewwindow.hpp  animationselectwindow.fl  attributegridwindow.fl  attributeselectwindow.fl  basearea.cpp  basearea.hpp  coverconfigurewindow.fl  cropconfigurewindow.cpp  cropconfigurewindow.fl  cropconfigurewindow.hpp  drawarea.cpp  drawarea.cpp.orig  drawarea.hpp  editormap.cpp  editormap.hpp  editormap.hpp.orig  groundinfowindow.cpp  groundinfowindow.fl  groundinfowindow.hpp  imagecache.cpp  imagecache.hpp  layerbrowserwindow.fl  layereditarea.cpp  layereditarea.hpp  layereditorwindow.fl  layerviewarea.cpp  layerviewarea.hpp  layerviewwindow.fl  (+16 more)
tools/mapinfo/src/: CMakeLists.txt  aboutwindow.fl  coverconfigurewindow.fl  cropconfigurewindow.fl  drawarea.hpp  groundinfowindow.fl  main.cpp  mainwindow.fl  mir2map.cpp  mir2map.hpp
tools/mapwil2png/src/: CMakeLists.txt  main.cpp
tools/monmagicwil2png/src/: CMakeLists.txt  main.cpp
tools/monstercsv2cpp/src/: monstercsv2cpp.py
tools/monstergen/src/: CMakeLists.txt  main.cpp
tools/npcgen/src/: main.cpp  (+1 more)
(+1301 files in other folders)
