ADD_SUBDIRECTORY(mapeditor)
ADD_SUBDIRECTORY(pkgviewer)
ADD_SUBDIRECTORY(mapinfo)
ADD_SUBDIRECTORY(animaker)
ADD_SUBDIRECTORY(mapdbmaker)

ADD_SUBDIRECTORY(npcwil2png)
ADD_SUBDIRECTORY(herowil2png)
ADD_SUBDIRECTORY(magicwil2png)
ADD_SUBDIRECTORY(weaponwil2png)
ADD_SUBDIRECTORY(monsterwil2png)
ADD_SUBDIRECTORY(monmagicwil2png)

ADD_SUBDIRECTORY(dbcreator)
ADD_SUBDIRECTORY(zsdbmaker)
ADD_SUBDIRECTORY(rawbufmaker)
