ADD_SUBDIRECTORY(mapeditor)
ADD_SUBDIRECTORY(pkgviewer)
ADD_SUBDIRECTORY(mapinfo)
ADD_SUBDIRECTORY(mapdbmaker)
ADD_SUBDIRECTORY(mapconverter)

ADD_SUBDIRECTORY(monstergen)
ADD_SUBDIRECTORY(mapwil2png)
ADD_SUBDIRECTORY(npcwil2png)
ADD_SUBDIRECTORY(herowil2png)
ADD_SUBDIRECTORY(hairwil2png)
ADD_SUBDIRECTORY(magicwil2png)
ADD_SUBDIRECTORY(weaponwil2png)
ADD_SUBDIRECTORY(helmetwil2png)
ADD_SUBDIRECTORY(monsterwil2png)

ADD_SUBDIRECTORY(npcgen)
ADD_SUBDIRECTORY(zsdbmaker)
ADD_SUBDIRECTORY(rawbufmaker)
ADD_SUBDIRECTORY(followuidmagiceditor)

ADD_SUBDIRECTORY(wtldecoder)
ADD_SUBDIRECTORY(bgmlistdecoder)
ADD_SUBDIRECTORY(soundlistdecoder)
