add_subdirectory(mapeditor)
add_subdirectory(pkgviewer)
add_subdirectory(mapinfo)
add_subdirectory(mapdbmaker)
add_subdirectory(mapconverter)

add_subdirectory(monstergen)
add_subdirectory(mapwil2png)
add_subdirectory(npcwil2png)
add_subdirectory(herowil2png)
add_subdirectory(hairwil2png)
add_subdirectory(magicwil2png)
add_subdirectory(weaponwil2png)
add_subdirectory(helmetwil2png)
add_subdirectory(monsterwil2png)

add_subdirectory(npcgen)
add_subdirectory(zsdbmaker)
add_subdirectory(rawbufmaker)
add_subdirectory(followuidmagiceditor)

add_subdirectory(wtldecoder)
add_subdirectory(bgmlistdecoder)
add_subdirectory(soundlistdecoder)

add_subdirectory(xmltran)
add_subdirectory(installres)
