AUX_SOURCE_DIRECTORY(. COMMON_SRC)
ADD_LIBRARY(common ${COMMON_SRC})
# TARGET_INCLUDE_DIRECTORIES(common PRIVATE ${EXTERNAL_INCLUDE_DIR})

TARGET_INCLUDE_DIRECTORIES(common PUBLIC ${LUA_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(common PUBLIC ${EXTERNAL_INCLUDE_DIR})

# TARGET_LINK_LIBRARIES(common ${LUA_LIBRARIES})
