FILE(GLOB FLTK_ALL_SRC "*.[fF][lL]")

SET(FLTK_CPP_SRC "")

include_directories(SYSTEM
  ${CMAKE_SOURCE_DIR}/external/include
  ${MARIADB_INCLUDE_DIR}
)

FOREACH(FLTK_SRC ${FLTK_ALL_SRC})
    # generate fltk output source file name
    GET_FILENAME_COMPONENT(T_BASENAME ${FLTK_SRC} NAME_WE)
    SET(T_OUT_CPPNAME ${T_BASENAME}.cpp)
    SET(T_OUT_HPPNAME ${T_BASENAME}.hpp)

    SET(FLTK_CPP_SRC
        ${FLTK_CPP_SRC}
        ${CMAKE_CURRENT_BINARY_DIR}/${T_OUT_HPPNAME}
        ${CMAKE_CURRENT_BINARY_DIR}/${T_OUT_CPPNAME})

    ADD_CUSTOM_COMMAND(OUTPUT ${T_OUT_HPPNAME} ${T_OUT_CPPNAME}
        DEPENDS ${FLTK_SRC}
        COMMAND fluid -c -o ${T_OUT_CPPNAME} -h ${T_OUT_HPPNAME} ${FLTK_SRC}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
ENDFOREACH()

AUX_SOURCE_DIRECTORY(. MONOSERVER_SRC)
ADD_EXECUTABLE(monoserver ${MONOSERVER_SRC} ${FLTK_CPP_SRC})

install(TARGETS monoserver DESTINATION ${BIN_DIR})

TARGET_INCLUDE_DIRECTORIES(monoserver PRIVATE ${COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(monoserver PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(monoserver PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(monoserver ${LUA_LIBRARIES}   )
TARGET_LINK_LIBRARIES(monoserver ${FLTK_LIBRARIES}  )
TARGET_LINK_LIBRARIES(monoserver ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(monoserver dl                 )
TARGET_LINK_LIBRARIES(monoserver common             )
TARGET_LINK_LIBRARIES(monoserver pthread            )
TARGET_LINK_LIBRARIES(monoserver mysqlclient        )
TARGET_LINK_LIBRARIES(monoserver ${G3LOG_LIBRARY}   )
TARGET_LINK_LIBRARIES(monoserver theron             )
TARGET_LINK_LIBRARIES(monoserver xs                 )
TARGET_LINK_LIBRARIES(monoserver ${ZIP_LIBRARY}     )
