SET(FLTK_HPP_SRC "")
SET(FLTK_CPP_SRC "")
FLTK_PARSE_FL_FILE(FLTK_HPP_SRC FLTK_CPP_SRC)

AUX_SOURCE_DIRECTORY(. FOLLOWUIDMAGICEDITOR_SRC)
ADD_EXECUTABLE(followuidmagiceditor ${FOLLOWUIDMAGICEDITOR_SRC} ${FLTK_CPP_SRC})

TARGET_INCLUDE_DIRECTORIES(followuidmagiceditor PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(followuidmagiceditor PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(followuidmagiceditor PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(followuidmagiceditor common)

INSTALL(TARGETS followuidmagiceditor DESTINATION tools/followuidmagiceditor)
