AUX_SOURCE_DIRECTORY(. HAIRWIL2PNG_SRC)
ADD_EXECUTABLE(hairwil2png ${HAIRWIL2PNG_SRC})
ADD_DEPENDENCIES(hairwil2png mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(hairwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(hairwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(hairwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(hairwil2png ${CMAKE_DL_LIBS})
TARGET_LINK_LIBRARIES(hairwil2png common          )
TARGET_LINK_LIBRARIES(hairwil2png PNG::PNG        )
