AUX_SOURCE_DIRECTORY(. HAIRWIL2PNG_SRC)
ADD_EXECUTABLE(hairwil2png ${HAIRWIL2PNG_SRC})

TARGET_INCLUDE_DIRECTORIES(hairwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(hairwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(hairwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(hairwil2png common          )
